Caso_3/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metabase-db
  labels:
    run: metabase-db
spec:
  replicas: 1
  selector:
    matchLabels:
      run: metabase-db
  serviceName: "mysql-service"
  template:
    metadata:
      generateName: metabase-db
      labels:
        run: metabase-db
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: mysql-config
          mountPath: /etc/mysql/conf.d/my.cnf
          subPath: my.cnf
        - name: mysql-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-config
        configMap:
          name: mysql-config
      - name: secret-volume
        secret:
          secretName: meta-db-secrets
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: mysql-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 2Gi
