Caso_3/metabase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  labels:
    run: metabase
spec:
  selector:
    run: metabase
  ports:
  - name: metabase
    port: 3000
    targetPort: 3000
