Caso_3/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    run: metabase-db
spec:
  ports:
  - port: 3306
    name: metabase-db
  selector:
    run: metabase-db
